--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,11 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <!-- Google -->
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <meta name="google-signin-client_id" content="296936106444-q921or6gat0utf6ard5i7en4csijbo3h.apps.googleusercontent.com">
+
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
